change file name

--- a/plots/benefits.html
+++ b/plots/benefits.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Benefits cliff</title>
-		<script type="text/javascript" src="d3.v5.min.js"></script>
+		<script src="https://d3js.org/d3.v5.min.js"></script>
 		<style type="text/css">
 			.line {
               fill: none;
@@ -265,7 +265,7 @@
                 .attr("class", "axis")
                 .attr("transform", "translate(0," + (h - padding) + ")")
                 .call(xAxis);
-						
+
             });
 
 		</script>
