--- a/plots/benefits.html
+++ b/plots/benefits.html
@@ -41,7 +41,7 @@
   			height = 500 - margin.top - margin.bottom;
 
 			// import dataset
-			d3.csv("benefits.csv", function(d) {
+			d3.csv("total_income.csv", function(d) {
               return {
                 composition: d.composition,
                 monthly_income: +d.monthly_income,
@@ -123,13 +123,13 @@
 			// end legend
 
 			// add the X gridlines
-		  svg.append("g")
-		      .attr("class", "grid")
-		      .attr("transform", "translate(0," + height + ")")
-		      .call(make_x_gridlines()
-		          .tickSize(-height)
-		          .tickFormat("")
-		      )
+		  // svg.append("g")
+		  //     .attr("class", "grid")
+		  //     .attr("transform", "translate(0," + height + ")")
+		  //     .call(make_x_gridlines()
+		  //         .tickSize(-height)
+		  //         .tickFormat("")
+		  //     )
 
 		  // add the Y gridlines
 		  svg.append("g")
