--- a/plots/benefits.html
+++ b/plots/benefits.html
@@ -41,7 +41,7 @@
   			height = 500 - margin.top - margin.bottom;
 
 			// import dataset
-			d3.csv("total_income.csv", function(d) {
+			d3.csv("benefits.csv", function(d) {
               return {
                 composition: d.composition,
                 monthly_income: +d.monthly_income,
