--- a/plots/benefits_income.html
+++ b/plots/benefits_income.html
@@ -40,16 +40,17 @@
 		var width = 960 - margin.left - margin.right,
   			height = 500 - margin.top - margin.bottom;
 
-				// JSON dataset of federal poverty federal_poverty_guidelines
-	 		 // will be used to draw vertical lines at 100%, 130%, 185%, and 200% of fpg
+			// JSON dataset of federal poverty federal_poverty_guidelines
+ 		 // will be used to draw vertical lines at 100%, 130%, 185%, and 200% of fpg
 
- 		 const fpl = [{
+		 const fpl = [{
  			 "name": "1 adult",
  			 "levels": {
  				 "a": 1012,
  				 "b": Math.round(1012 * 1.3),
  				 "c": Math.round(1012 * 1.85),
- 				 "d": Math.round(1012 * 2)
+ 				 "d": Math.round(1012 * 2),
+				 "e": Math.round(1012 * 2.1)
  			 }
  		 }, {
  			 "name": "1 adult, 1 child",
@@ -57,7 +58,8 @@
  				 "a": 1372,
  				 "b": Math.round(1372 * 1.3),
  				 "c": Math.round(1372 * 1.85),
- 				 "d": Math.round(1372 * 2)
+ 				 "d": Math.round(1372 * 2),
+				 "e": Math.round(1372 * 2.1)
  			 }
  		 }, {
  			 "name": "1 adult, 2 children",
@@ -65,7 +67,8 @@
  				 "a": 1732,
  				 "b": Math.round(1732 * 1.3),
  				 "c": Math.round(1732 * 1.85),
- 				 "d": Math.round(1732 * 2)
+ 				 "d": Math.round(1732 * 2),
+				 "e": Math.round(1732 * 2.1)
  			 }
  		 }, {
  			 "name": "1 adult, 3 children",
@@ -73,7 +76,8 @@
  				 "a": 2092,
  				 "b": Math.round(2092 * 1.3),
  				 "c": Math.round(2092 * 1.85),
- 				 "d": Math.round(2092 * 2)
+ 				 "d": Math.round(2092 * 2),
+				 "e": Math.round(2092 * 2.1)
  			 }
  		 }, {
  			 "name": "2 adults",
@@ -81,7 +85,8 @@
  				 "a": 1372,
  				 "b": Math.round(1372 * 1.3),
  				 "c": Math.round(1372 * 1.85),
- 				 "d": Math.round(1372 * 2)
+ 				 "d": Math.round(1372 * 2),
+				 "e": Math.round(1372 * 2.1)
  			 }
  		 }, {
  			 "name": "2 adults, 1 child",
@@ -89,7 +94,8 @@
  				 "a": 1732,
  				 "b": Math.round(1732 * 1.3),
  				 "c": Math.round(1732 * 1.85),
- 				 "d": Math.round(1732 * 2)
+ 				 "d": Math.round(1732 * 2),
+				 "e": Math.round(1732 * 2.1)
  			 }
  		 }, {
  			 "name": "2 adults, 2 children",
@@ -97,7 +103,8 @@
  				 "a": 2092,
  				 "b": Math.round(2092 * 1.3),
  				 "c": Math.round(2092 * 1.85),
- 				 "d": Math.round(2092 * 2)
+ 				 "d": Math.round(2092 * 2),
+				 "e": Math.round(2092 * 2.1)
  			 }
  		 }, {
  			 "name": "2 adults, 3 children",
@@ -105,10 +112,13 @@
  				 "a": 2452,
  				 "b": Math.round(2452 * 1.3),
  				 "c": Math.round(2452 * 1.85),
- 				 "d": Math.round(2452 * 2)
+ 				 "d": Math.round(2452 * 2),
+				 "e": Math.round(2452 * 2.1)
  			 }
  		 }];
 
+		 const poverty_levels = ['a', 'b', 'c', 'd', 'e']
+		 const poverty_text = ["100%", "130%", "185%", "200%", "210%"]
 
 			// import dataset
 			d3.csv("https://ff-plots.s3.amazonaws.com/data/total_income.csv", function(d) {
@@ -278,9 +288,6 @@
 							 }
 						 }
 
-						 var poverty_levels = ['a', 'b', 'c', 'd']
-						 var poverty_text = ["100%", "130%", "185%", "200%"]
-
 						 for(var i = 0; i < poverty_levels.length; ++i) {
 
 								var fpl_threshold = single_fpl.levels[poverty_levels[i]]
@@ -341,9 +348,6 @@
 						 { break; }
 					 }
 				 }
-
-				 var poverty_levels = ['a', 'b', 'c', 'd']
-				 var poverty_text = ["100%", "130%", "185%", "200%"]
 
 				 for(var i = 0; i < poverty_levels.length; ++i) {
 
@@ -487,7 +491,7 @@
 		            "translate(" + (width/2) + " ," +
 		                           (height + margin.top + 30) + ")")
 		      .style("text-anchor", "middle")
-		      .text("Monthly W-2 Wages");
+		      .text("Monthly Pre-tax Income");
 
 			// text label for the y axis
 		  svg.append("text")
@@ -496,7 +500,7 @@
 		      .attr("x",0 - (height / 2))
 		      .attr("dy", "1em")
 		      .style("text-anchor", "middle")
-		      .text("Net Monthly Wages");
+		      .text("Monthly After-tax Income Plus Benefits");
 
 			// add text saying that FPG stands for federal poverty guidelines
 			svg.append("text")
