update total income

--- a/plots/benefits_income.html
+++ b/plots/benefits_income.html
@@ -121,7 +121,7 @@
 		 const poverty_text = ["100%", "130%", "185%", "200%", "210%"]
 
 			// import dataset
-			d3.csv("https://ff-plots.s3.amazonaws.com/data/total_income.csv", function(d) {
+			d3.csv("total_income.csv", function(d) {
               return {
                 composition: d.composition,
                 monthly_income: +d.monthly_income,
